update in limits-service

--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.application.name=limits-service
+server.port=8080
 
+limits-serv.min=9
+limits-serv.max=999
+
+spring.cloud.config.enabled=false
