--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=cloud-config-server
+server.port=8888
+
+# to use local git repo we need to add <file://>
+spring.cloud.config.server.git.uri=file://C:/Sudipto Disk 1/Learning/Java/git-localconfig-repo
