--- a/limits-service/src/main/resources/bootstrap.properties
+++ b/limits-service/src/main/resources/bootstrap.properties
@@ -7,6 +7,5 @@ spring.profiles.active=qa
 #limits-serv.min=9
 #limits-serv.max=999
 
-spring.cloud.config.enabled=true
-#spring.config.import=configserver:
+spring.cloud.config.enabled=false
 spring.cloud.config.uri=http://localhost:8888
