--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=currency-conversion-service
 server.port=8100
 
+
 spring.cloud.config.enabled=false
 spring.cloud.config.import-check.enabled=false
 spring.cloud.config.uri=http://localhost:8888
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+#currency-exchange-service.ribbon.listOfServers=http://localhost:8000, http://localhost:8001
 
