--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -43,7 +43,11 @@
 				org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>
+				org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>
 				org.springframework.boot</groupId>
@@ -65,7 +69,8 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>
+				org.springframework.boot</groupId>
 			<artifactId>
 				spring-boot-starter-test</artifactId>
 			<scope>test</scope>
