--- a/currency-conversion-service/pom.xml
+++ b/currency-conversion-service/pom.xml
@@ -50,23 +50,34 @@
 		<dependency>
 			<groupId>
 				org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<artifactId>
+				spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>
 				org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<artifactId>
+				spring-cloud-starter-netflix-ribbon</artifactId>
 			<version>2.2.10.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>
 				org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<version>3.1.11</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>
+				org.springframework.cloud</groupId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>
+				org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<scope>
+				test</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
